styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.bash {
  @apply bg-gradient-to-tl from-puccin-text to-puccin-crust text-transparent bg-clip-text hover:text-puccin-text link;
}

.python {
  @apply text-puccin-blue hover:text-puccin-text link;
}

.rust {
  @apply text-puccin-peach hover:text-puccin-text link;
}

.sweden {
  @apply bg-sweden bg-cover bg-bottom text-transparent bg-clip-text;
}

.project {
  @apply text-puccin-red link;
}

.link {
  @apply transition duration-500 ease-in-out hover:underline underline-offset-4 cursor-pointer;
}

.buttonwithicon {
  @apply flex items-center bg-puccin-mantle py-4 border-2 w-60 overflow-x-auto rounded-3xl justify-center transition duration-500 ease-in-out hover:bg-puccin-text hover:text-puccin-crust text-sm gap-x-2;
}

.buttonwithicon > img {
  @apply file:transition duration-500 ease-in-out h-6 w-6;
}

.button {
  @apply bg-puccin-mantle py-4 border-2 w-60 overflow-x-auto rounded-3xl justify-center hover:bg-puccin-text hover:text-puccin-crust text-sm;
}

.main {
  @apply text-puccin-text text-lg h-screen;
}

.bg {
  @apply absolute inset-0 bg-center bg-cover bg-evening h-screen;
}

.bg-blur {
  @apply absolute inset-0 backdrop-blur-md bg-opacity-50 h-screen;
}

.base {
  @apply relative font-mono bg-puccin-base rounded-2xl p-10;
}

.footer {
  @apply absolute text-center justify-center items-center text-sm left-1/2 bottom-2 transform -translate-x-1/2 font-mono pt-10;
}

